--- a/libs/books/feature/src/lib/book-search/book-search.component.html
+++ b/libs/books/feature/src/lib/book-search/book-search.component.html
@@ -7,7 +7,7 @@
       placeholder="Search for books to add to your reading list"
       formControlName="term"
     />
-    <button mat-icon-button matSuffix>
+    <button mat-icon-button matSuffix aria-label="Search Book">
       <mat-icon>search</mat-icon>
     </button>
   </mat-form-field>
@@ -49,6 +49,7 @@
   <div class="empty">
     <p>
       Try searching for a topic, for example "<a (click)="searchExample()"
+      tabindex="0"
         >JavaScript</a
       >".
     </p>
