--- a/libs/books/feature/src/lib/reading-list/reading-list.component.html
+++ b/libs/books/feature/src/lib/reading-list/reading-list.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="(readingList$ | async).length > 0; else empty">
+<ng-container *ngIf="(readingList$ | async).length > 0; else empty" data-testing="reading-list">
   <div class="reading-list-item" *ngFor="let b of readingList$ | async">
     <div>
       <img
@@ -19,6 +19,7 @@
         color="warn"
         [attr.aria-label]="'Remove ' + b.title + ' from reading list'"
         (click)="removeFromReadingList(b)"
+        data-testing="remove-book-from-list"
       >
         <mat-icon>remove_circle</mat-icon>
       </button>
